--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "global wildfire dashboard",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open",
     "build": "webpack"
   },
   "repository": {
@@ -33,7 +33,7 @@
     "@popperjs/core": "^2.4.4",
     "@sentry/browser": "^5.23.0",
     "apexcharts": "^3.20.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "bootstrap-slider": "^11.0.2",
     "chart.js": "^2.9.3",
@@ -62,6 +62,8 @@
   },
   "devDependencies": {
     "css-loader": "^4.3.0",
-    "webpack-cli": "^3.3.12"
+    "html-webpack-plugin": "^5.3.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   }
 }
