--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chart.js": "^2.9.3",
     "chroma": "0.0.1",
     "chroma-js": "^2.1.0",
+    "esri-leaflet": "^3.0.2",
     "file-loader": "^6.1.0",
     "georaster": "^1.2.0",
     "georaster-layer-for-leaflet": "^0.6.8",
